# openstatistic

./: .gitignore  COPYING  Makefile.am  README.md  cloudbuild.yaml  configure.ac  openstatistic.spec.in
ci/centos/7/: Dockerfile
ci/fedora/33/: Dockerfile
ci/fedora/35/: Dockerfile
ci/fedora/37/: Dockerfile
ci/rockylinux/8/: Dockerfile
ci/rockylinux/8.5/: Dockerfile
ci/ubuntu/18.04/: Dockerfile
ci/ubuntu/20.04/: Dockerfile
ci/ubuntu/22.04/: Dockerfile
debian/: changelog.in  control  control.without-python3  openstatistic-dev.install  openstatistic.install  python-openstatistic.install  python3-openstatistic.install  rules  rules.without-python3
include/: Makefile.am
include/ostatistic/: Makefile.am  any.h  exception.h  exception.inl  registrar.h  registrar.inl  service.h  statistic.h  statisticnonnumeric.h  statisticnonnumeric.inl  statisticnumeric.h  statisticnumeric.inl  statisticproperties.h  table.h  table.inl  tablepublisher.h
src/: Makefile.am
src/example/: Makefile.am  main.cc
src/libostatistic/: Makefile.am  any.cc  anyutils.h  clearupdatehandler.cc  clearupdatehandler.h  errorresponse.cc  errorresponse.h  inetaddr.cc  inetaddr.h  libostatistic.pc.in  openstatisticapi.proto  parameterconvert.h  parameterconvert.inl  queryhandler.cc  queryhandler.h  registrarimpl.cc  registrarimpl.h  requestmessagehandler.cc  requestmessagehandler.h  service.cc  session.cc  session.h  socket.cc  socket.h  statisticinfo.h  statisticinfo.inl  tableclearupdatehandler.cc  tableclearupdatehandler.h  tableinfo.h  tableinfo.inl  tablequeryhandler.cc  tablequeryhandler.h
src/python/: Makefile.am  setup.py.in
src/python/ostatistic/: __init__.py
src/python/ostatistic/interface/: __init__.py  client.py
src/python/otestpoint/: __init__.py
src/python/otestpoint/ostatistic/: __init__.py  probebase.py
src/python/scripts/: ostatistic
