ostatisticincdir = $(includedir)/ostatistic/

ostatisticinc_HEADERS = \
 any.h \
 exception.h \
 exception.inl \
 registrar.h \
 registrar.inl \
 service.h \
 statistic.h \
 statisticnonnumeric.h \
 statisticnonnumeric.inl \
 statisticnumeric.h \
 statisticnumeric.inl \
 statisticproperties.h \
 table.h \
 table.inl \
 tablepublisher.h

install-exec-hook:
	$(mkinstalldirs) $(DESTDIR)$(ostatisticincdir)
